# Automated-Scout20

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/assets/: index.html  layout.css  style.css
client/source/: App.tsx  lib.ts  main.tsx  util.ts
client/source/components/: TeamList.tsx  TitleIcon.tsx
client/source/pages/: RootPage.tsx  UnknownPage.tsx
server/: Cargo.toml
server/src/: analysis.rs  cors.rs  data.rs  database.rs  main.rs
src/: app.js  first.js  frc.js  scouty.js
static/js/: match.js  teamCompare.js  teamevent.js  viewAll.js
views/: event.pug  teamCompare.pug  teamevent.pug
