[package]
name = "automated-scout"
version = "0.22.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-rc.3"
futures-util = "0.3"
leveldb = "0.8"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.11"
tokio = { version = "1", features = ["full"] }
